[package]
name = "flint"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Luna Amora <luna.mberry@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"

[lib]

[dependencies]
shuttle-service = { version = "0.10.0", features = ["bot-serenity"] }
shuttle-secrets = "0.10.0"
serenity = { version = "0.11.5", default-features = false, features = [
    "gateway",
    "framework",
    "standard_framework",
    "rustls_backend",
] }

anyhow = "1.0.69"
tracing = "0.1.37"

ashfire = { git = "https://github.com/LunaAmora/Ashfire" }

wasmtime = { version = "4.0.0", default-features = false, features = ["cranelift", "wat"]}
wasmtime-wasi = "4.0.0"
wasi-common = "4.0.0"
